# app-security

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .yamllint  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Dockerfile.lambda  GITHUB_ACTIONS_SETUP.md  QUICKSTART.md  README.md  app.py  deploy.sh  docker-compose.yml  lambda_handler.py  pre-commit_README.md  pyproject.toml
.github/workflows/: deploy.yml  setup-infrastructure.yml
static/css/: style.css
templates/: about.html  base.html  index.html
terraform/: github-actions.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
