[tool.poetry]
name = "app-security"
version = "0.1.0"
description = "Flask learning sample application - a simple task management app"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
Flask = "3.0.0"
Werkzeug = "3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.3.0,<5.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "isort (>=6.1.0,<7.0.0)",
    "yamllint (>=1.37.1,<2.0.0)"
]
